--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Nutritious</title>
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
     <div class="form-container">
       <form class="form">
         <i class="fas fa-search icon"></i>
-        <input type="text" class="input" placeholder="Search for a fruit" />
+        <input type="text" name="name" class="input" placeholder="Search for a fruit" />
       </form>
     </div>
 
