adding loading spinner Relates #30

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,15 @@
     <div class="form-container">
       <form class="form">
         <i class="fas fa-search icon"></i>
-        <input type="text" name="name" class="input" placeholder="Search for a fruit" />
+        <input
+          type="text"
+          name="name"
+          class="input"
+          placeholder="Search for a fruit"
+        />
       </form>
     </div>
-
+    <div class="loader hidden"></div>
     <div class="container"></div>
     <script src="js/logic.js"></script>
     <script src="js/dom.js"></script>
